--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,7 +15,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules/
+node_modules
 dist/
 dist-ssr
 *.local
@@ -32,3 +32,4 @@ uploads/
 *.sln
 *.sw?
 # .vercel
+.vercel
