--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "browser-image-compression": "^2.0.2",
+    "cloudinary": "^2.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "jszip": "^3.10.1",
     "lucide-react": "^0.545.0",
+    "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
